# vectorizationFourStages

./: .gitignore  App.tsx  CLEANUP_SUMMARY.txt  DOCUMENTATION_RESTRUCTURE_COMPLETE.md  Dockerfile  FINAL_REPORT.md  FIX_QUALITY_ISSUE.md  PRODUCTION_READY_REPORT.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  RENDER_DEPLOYMENT.md  RUST_AI_ROADMAP.md  RUST_QUICKSTART.md  WEEK1-4_IMPLEMENTATION.md  WEEK1_POC_SUMMARY.md  advanced_vectorizer.py  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  photorealistic_vectorizer.py  start_fullstack.sh  stop_fullstack.sh  test_kmeans_benchmark.py  test_rust_quantization.py  tsconfig.json  ultimate_pixel_svg.py  ultra_vectorizer.py
.github/workflows/: ci-cd.yml
backend_processor/: README_BACKEND.md  api_server.py  api_server_old.py  download_models.py  intelligent_vectorizer.py  professional_vectorizer.py  requirements.txt  semantic_vectorizer.py  start_backend.sh  test_vectorization.py
components/: Header.tsx  ImageUploader.tsx
components/icons/: LogoIcon.tsx  UIIcons.tsx  UploadIcon.tsx
docs/: 1_CORE_FUNCTIONALITY.md  2_API_REFERENCE.md  3_DEPLOYMENT_GUIDE.md  4_OPERATIONS_MANUAL.md  AI_MODEL_SETUP.md  App_Summary.md  COMPLETE_DOCUMENTATION_BUNDLE.md  Technical_Documentation.md
docs/archive/: App_Architecture_Documentation.md  README.md
monitoring/: prometheus.yml
rust_core/: Cargo.toml  optimize_pgo.sh
rust_core/src/: ai_edge_detection.rs  color_lab.rs  color_quantization.rs  edge_detection.rs  lib.rs  model_loader.rs  semantic_segmentation.rs  simd_ops.rs
(+1 files in other folders)
