[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
image = "0.24"
rayon = "1.8"
ndarray = "0.15"
bytemuck = "1.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
